assets/css/prototype/approved/events-landing-temp.scss
 /* For mobile phones: */

 .main__content{
    background-color: #D1D3D4;
}
@media only screen and (min-width: 600px) {
    /* For tablets: */
      .main__content{
        background-color: #D1D3D4;
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .usa-card-group{
        margin: auto;
    }
}
@media only screen and (min-width: 880px) {
    /* For desktop: */
    .intro__section{
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 3rem;
    }
    .page__title{
        order: 1;
        gap: 1rem;
    }
    .callout__box{
        order: 2;
    }
    .event__search{
        background-image: 
            linear-gradient(black, black),
            url('/assets/img/prototype/audience-applauding-speaker-after-conference-600w-479633347.webp');
        color: white;
        padding-top: 30px;
        padding-bottom: 30px;
        background-size: cover;
        background-blend-mode: saturation;
    }
    .event__search a{
        color: white;
    }
    .main__content{
        background-color: #D1D3D4;
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .main__content .section__h2{
        color: #002552;
    }
    .usa-card-group{
        margin: auto;
    }
}

